@@ -1,3 +1,8 @@
+2007-08-03  Petr Ovtchenkov  <ptr@island.corbina.net>
+
+	* type_traits.h: select appropriate TR1 type_traits implementation
+	or use own, if not good one found [initial release].
+
 2007-02-28  Petr Ovtchenkov  <ptr@island.corbina.net>
 
 	* tfstream: fstream-like interface to unique temporary file;
